Attempt to fix alignment

--- a/css/main.css
+++ b/css/main.css
@@ -32,7 +32,6 @@ header {
 .nav li {
   display: inline;
   text-align: center;
-  padding: 0.4em;
   box-shadow: inset 0 0 0 0 #092;
   color: #092;
   transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
